Changed the title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>My Personal HTML page</title>
+  <title>Ronit Samaddar</title>
 </head>
 <body>
   <hr size="3" noshade />
