Brought contact portion back into original page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,27 @@
   <hr size="3" noshade />
   <br />
 
-  <h2><a href="contact.html">Contact Me</a></h2>
+  <h2>Contact Me</h2>
+	<table>
+    <tbody>
+      <tr>
+        <td width="100">Mobile</td>
+        <td>(+91)8017158678</td>
+      </tr>
+      <tr>
+        <td>Email ID</td>
+        <td>ronitsamaddar97@gmail.com</td>
+      </tr>
+    </tbody>
+  </table>
+  <!--<hr size="3" noshade />-->
+  <table>
+    <tr>
+      <td width="50"><a href="https://www.facebook.com/ronit.samaddar/"><img src="fb.png" alt="Facebook icon" height="30"></a> </td>
+      <td width="50"><a href="https://www.linkedin.com/in/ronit-samaddar-b4550012a/"><img src="li.png" alt="Facebook icon" height="30"></a> </td>
+      <td width="50"><a href="https://github.com/RonitSamaddar"><img src="github.png" alt="Facebook icon" height="40"></a> </td>
+    </tr>
+  </table>
 </body>
 
 </html>
