Restructured the heading portion

--- a/index.html
+++ b/index.html
@@ -7,15 +7,25 @@
 </head>
 
 <body>
-  <div style="text-align:center;">
-    <img src="me_circle.png" height="200" />
-  </div>
   <hr size="3" noshade />
-  <h1 style="text-align:center;">RONIT SAMADDAR</h1>
-  <h3 style="text-align:center;"><em>Technologist at Alphonso Inc(currently LG Ads)</em></h3>
-  <br />
-  <h2 style="text-align:center;">Welcome to my personal website</h2>
+  <table cellspacing="50">
+    <tbody>
+      <tr>
+        <td><img src="me_circle.png" height="200" /></td>
+        <td>
+          <div>
+            <h1 style="text-align:center;">RONIT SAMADDAR</h1>
+            <h3 style="text-align:center;"><em>Technologist at Alphonso Inc(currently LG Ads)</em></h3>
+            <br />
+            <h2 style="text-align:center;">Welcome to my personal website</h2>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
   <hr size="3" noshade />
+
+
   <br />
   <p> I am Ronit Samaddar, software engineer, currently joining LG Ads as a fresher in a Technologist role from summer 2021. I have been interested in coding from many years specially because of the creativity it allows in coming up with solutions to
     problems, or just writing code that lights up pixels on the screen </p>
@@ -27,7 +37,7 @@
   <br />
 
   <h2>Contact Me</h2>
-	<table>
+  <table>
     <tbody>
       <tr>
         <td width="100">Mobile</td>
