--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Ronit Samaddar</title>
 </head>
 
-<body>
+<body style="background-color:#fbc6a4;">
   <hr size="3" noshade />
-  <table cellspacing="50">
+  <table cellspacing="30">
     <tbody>
       <tr>
         <td><img src="me_circle.png" height="200" /></td>
