Added separate css file for css styling

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Ronit Samaddar</title>
-</head>
+  <link rel="stylesheet" href="main.css">
 
-<body style="background-color:#fbc6a4;">
-  <hr size="3" noshade />
+</head>
+<body>
+  <hr/>
   <table cellspacing="30">
     <tbody>
       <tr>
@@ -23,7 +24,7 @@
       </tr>
     </tbody>
   </table>
-  <hr size="3" noshade />
+  <hr/>
 
 
   <br />
@@ -33,7 +34,7 @@
     Apart from coding, my other interests include writing, baking, playing synthesizer (you know the one that looks like a smaller cropped out version of the piano) and exploring life in general.
   </p>
   <br />
-  <hr size="3" noshade />
+  <hr/>
   <br />
 
   <h2>Contact Me</h2>
@@ -49,7 +50,7 @@
       </tr>
     </tbody>
   </table>
-  <!--<hr size="3" noshade />-->
+  <!--<hr/>-->
   <table>
     <tr>
       <td width="50"><a href="https://www.facebook.com/ronit.samaddar/"><img src="fb.png" alt="Facebook icon" height="30"></a> </td>
