--- a/index.html
+++ b/index.html
@@ -7,57 +7,63 @@
   <link rel="stylesheet" href="main.css">
 
 </head>
+
 <body>
-  <hr/>
-  <table cellspacing="30">
-    <tbody>
-      <tr>
-        <td><img src="me_circle.png" height="200" /></td>
-        <td>
-          <div>
-            <h1 style="text-align:center;">RONIT SAMADDAR</h1>
-            <h3 style="text-align:center;"><em>Technologist at Alphonso Inc(currently LG Ads)</em></h3>
-            <br />
-            <h2 style="text-align:center;">Welcome to my personal website</h2>
-          </div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <hr/>
+  <div class="title">
+    <table cellspacing="30">
+      <tbody>
+        <tr>
+          <td><img src="me_circle.png" height="200" /></td>
+          <td>
+            <div>
+              <h1 style="text-align:center;">RONIT SAMADDAR</h1>
+              <h3 style="text-align:center;"><em>Technologist at Alphonso Inc(currently LG Ads)</em></h3>
+              <br />
+              <h2 style="text-align:center;">Welcome to my personal website</h2>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+
+  </div>
+
+  <div class="content">
 
 
-  <br />
-  <p> I am Ronit Samaddar, software engineer, currently joining LG Ads as a fresher in a Technologist role from summer 2021. I have been interested in coding from many years specially because of the creativity it allows in coming up with solutions to
-    problems, or just writing code that lights up pixels on the screen </p>
-  <p>
-    Apart from coding, my other interests include writing, baking, playing synthesizer (you know the one that looks like a smaller cropped out version of the piano) and exploring life in general.
-  </p>
-  <br />
-  <hr/>
-  <br />
+    <p> I am Ronit Samaddar, software engineer, currently joining LG Ads as a fresher in a Technologist role from summer 2021. I have been interested in coding from many years specially because of the creativity it allows in coming up with solutions
+      to
+      problems, or just writing code that lights up pixels on the screen </p>
+    <p>
+      Apart from coding, my other interests include writing, baking, playing synthesizer (you know the one that looks like a smaller cropped out version of the piano) and exploring life in general.
+    </p>
+  </div>
 
-  <h2>Contact Me</h2>
-  <table>
-    <tbody>
+  <div class="footer">
+
+    <h2>Contact Me</h2>
+    <table>
+      <tbody>
+        <tr>
+          <td width="100">Mobile</td>
+          <td>(+91)8017158678</td>
+        </tr>
+        <tr>
+          <td>Email ID</td>
+          <td>ronitsamaddar97@gmail.com</td>
+        </tr>
+      </tbody>
+    </table>
+    <!--<hr/>-->
+    <table>
       <tr>
-        <td width="100">Mobile</td>
-        <td>(+91)8017158678</td>
+        <td width="50"><a href="https://www.facebook.com/ronit.samaddar/"><img src="fb.png" alt="Facebook icon" height="30"></a> </td>
+        <td width="50"><a href="https://www.linkedin.com/in/ronit-samaddar-b4550012a/"><img src="li.png" alt="Facebook icon" height="30"></a> </td>
+        <td width="50"><a href="https://github.com/RonitSamaddar"><img src="github.png" alt="Facebook icon" height="40"></a> </td>
       </tr>
-      <tr>
-        <td>Email ID</td>
-        <td>ronitsamaddar97@gmail.com</td>
-      </tr>
-    </tbody>
-  </table>
-  <!--<hr/>-->
-  <table>
-    <tr>
-      <td width="50"><a href="https://www.facebook.com/ronit.samaddar/"><img src="fb.png" alt="Facebook icon" height="30"></a> </td>
-      <td width="50"><a href="https://www.linkedin.com/in/ronit-samaddar-b4550012a/"><img src="li.png" alt="Facebook icon" height="30"></a> </td>
-      <td width="50"><a href="https://github.com/RonitSamaddar"><img src="github.png" alt="Facebook icon" height="40"></a> </td>
-    </tr>
-  </table>
+    </table>
+
+  </div>
 </body>
 
 </html>
