Edited upper block to black background and with a heading

--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Ronit Samaddar</title>
-    <link rel="icon" href="favicon.ico"><!--favicon generated from favicon.cc with font= Source Serif pro-->
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
-    <div id="div1">
 
-    </div>
-    <div id="div2">
+<head>
+  <meta charset="utf-8">
+  <title>Ronit Samaddar</title>
+  <link rel="icon" href="favicon.ico">
+  <!--favicon generated from favicon.cc with font= Source Serif pro-->
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Special+Elite&family=Tangerine:wght@700&display=swap" rel="stylesheet">
+</head>
 
-    </div>
+<body>
+  <div id="div1">
 
-  </body>
+    <h1 id="name">I'm Ronit</h1>
+
+  </div>
+  <div id="div2">
+
+  </div>
+
+</body>
+
 </html>
