Centred heading and text on first block

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 
 <body>
   <div id="div1">
+    <div class="centre_text">
+        <h1 id="name">I'm Ronit</h1>
+        <h3 id="position">Technologist at Alphonso Inc.</h3>
+    </div>
 
-    <h1 id="name">I'm Ronit</h1>
+
 
   </div>
   <div id="div2">
