--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <!--favicon generated from favicon.cc with font= Source Serif pro-->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Special+Elite&family=Tangerine:wght@700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div id="div1">
     <div class="centre_text">
-        <h1 id="name">I'm Ronit</h1>
+        <h1 id="name">I'm RONIT</h1>
         <h3 id="position">Technologist at Alphonso Inc.</h3>
     </div>
 
