Centering the laptop ensuring that it is not stretching with width

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <body>
   <div id="div1">
     <div class="centre_text">
-        <h1 id="name">I'm RONIT</h1>
-        <h3 id="position">Technologist at Alphonso Inc.</h3>
+        <img src="laptop.png" id="laptop"/>
+        <!--<h1 id="name">I'm RONIT</h1>
+        <h3 id="position">Technologist at Alphonso Inc.</h3>-->
+
     </div>
 
 
