Positioning and centering the text on the laptop in the first block

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div id="div1">
     <div class="centre_text">
         <img src="laptop.png" id="laptop"/>
-        <!--<h1 id="name">I'm RONIT</h1>
-        <h3 id="position">Technologist at Alphonso Inc.</h3>-->
+        <h1 id="name">I'm RONIT</h1>
+        <h3 id="position">Technologist at Alphonso Inc.</h3>
 
     </div>
 
