Fixed some spacing and size issues

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="favicon.ico">
   <!--favicon generated from favicon.cc with font= Source Serif pro-->
   <link rel="stylesheet" href="css/styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@300&display=swap" rel="stylesheet">
 </head>
