Added pictures to landing page

--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
                 <div class="col-md-4">
                     <div class=page1-section-box>
                         <div class="box-image">
-
+                                <img class ="box-image-pic" src="code2.jpg" alt="Picture of a laptop to represent coding">
                             </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class=page1-section-box>
                         <div class="box-image">
-
+                                <img class ="box-image-pic" src="writing.jpg" alt="Picture of a open notebook to represent writing">
                             </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class=page1-section-box>
                         <div class="box-image">
-
+                                <img class ="box-image-pic" src="other.jpg" alt="">
                             </div>
                     </div>
                 </div>
