Added headings below the landing page images

--- a/index.html
+++ b/index.html
@@ -41,22 +41,45 @@
                 <div class="col-md-4">
                     <div class=page1-section-box>
                         <div class="box-image">
-                                <img class ="box-image-pic" src="code2.jpg" alt="Picture of a laptop to represent coding">
-                            </div>
+                            <img class="box-image-pic" src="code2.jpg" alt="Picture of a laptop to represent coding">
+                        </div>
+                        <div class="box-text">
+                            <h1 class="section-box-h1"> Coding / Programming</h1>
+                            <p class="section-box-p">
+                                A thing that is both my passion and profession.<br />
+                                <a href="#">Explore More...</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class=page1-section-box>
                         <div class="box-image">
-                                <img class ="box-image-pic" src="writing.jpg" alt="Picture of a open notebook to represent writing">
-                            </div>
+                            <img class="box-image-pic" src="writing.jpg" alt="Picture of a open notebook to represent writing">
+                        </div>
+                        <div class="box-text">
+                            <h1 class="section-box-h1"> Writing</h1>
+                            <p class="section-box-p">
+                                Whether it be poems, musings or stories, whatever seems to
+                                roam about in the endless abyss of my mind.<br />
+                                <a href="#">Explore More...</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class=page1-section-box>
                         <div class="box-image">
-                                <img class ="box-image-pic" src="other.jpg" alt="">
-                            </div>
+                            <img class="box-image-pic" src="other.jpg" alt="">
+                        </div>
+                        <div class="box-text">
+                            <h1 class="section-box-h1"> Others</h1>
+                            <p class="section-box-p">
+                                Other interests include baking, travelling, photography and
+                                whatever seems to engage me at some point of time.<br />
+                                <a href="#">Explore More...</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
